Fixing alignment of buttons and spacing

--- a/app/assets/stylesheets/_items.css.scss
+++ b/app/assets/stylesheets/_items.css.scss
@@ -11,7 +11,7 @@
 	margin:20px;
 }
 .lower_level{
-  padding:10px;
+  padding:0 20px 20px 20px;
 }
 .embed_button{
   display:inline;
@@ -36,11 +36,11 @@
   }
 }
 .check_answer_result{
-  margin:-5px 23px 20px 20px;
+  margin:-5px 23px 18px 20px;
 }
 .tooltip-inner{
   margin:0;
-  padding:12px 0;
+  padding:10px 0;
   max-width:100%;
   width:100%;
   font-size:22px;
